--- a/congcu.html
+++ b/congcu.html
@@ -66,20 +66,19 @@
         <div class="col-md-6 col-sm-12 wow fadeInLeft" data-wow-delay="0.3s">
           <h2>Cổng Trường Cũ</h2>
           <p>
-            Ngày ấy, cánh cổng trường cũ là nơi đón biết bao thế hệ học trò. 
-            Mỗi viên gạch, mỗi tấm biển, từng hàng cây đều chứng kiến tuổi học trò trong sáng, 
-            những buổi sáng đến lớp, những chiều tan trường, và cả những kỷ niệm không thể nào quên.
+            Lịch sử xây dựng và trưởng thành
+Trường THPT Nguyễn Du ngày nay, tiền thân là Trường Trung cấp Kỹ thuật Nguyên Đán, được thành lập vào ngày 15 tháng 8 năm 1985 theo quyết định của Ủy ban nhân dân tỉnh Hà Sơn Bình (nay là Hà Nội). 
           </p>
           <p>
-            Dù ngày nay cổng trường đã thay đổi, song hình ảnh ấy vẫn mãi in đậm trong tâm trí, 
-            là biểu tượng của một thời áo trắng tinh khôi, của tình thầy trò, bạn bè, và tuổi thanh xuân đẹp nhất.
+            Trải qua gần một phần ba thế kỷ xây dựng và trưởng thành, vượt qua muôn vàn khó khăn, trường THPT Nguyễn Du ngày nay đã vững vàng trở thành niềm tự hào của bao thế hệ học sinh và nhân dân trong vùng. Với hơn 30 năm xây dựng và phát triển, Trường THPT Nguyễn Du luôn kiên định mục tiêu chiến lược “nâng cao trí tuệ, ươm mầm tài năng, ươm mầm tài năng”. Từ mái trường này, hơn 15.000 học viên đã ra trường, trong đó có nhiều đồng chí giữ chức vụ quan trọng trong lãnh đạo địa phương, doanh nhân thành đạt, giáo viên, giảng viên các cấp, cán bộ, lãnh đạo cấp cao của quân đội
           </p>
         </div>
 
         <div class="col-md-6 col-sm-12 wow fadeInRight" data-wow-delay="0.3s">
           <div class="image-frame" 
-               style="background:url('images/#') center/cover no-repeat; min-height:300px; border-radius:12px; box-shadow:0 6px 16px rgba(0,0,0,0.15);">
+               style="background:url('images/team-image1.jpg') center/cover no-repeat ; min-height:300px; border-radius:12px; box-shadow:0 6px 16px rgba(0,0,0,0.15);">
           </div>
+          
         </div>
       </div>
     </div>
@@ -89,7 +88,7 @@
   <section id="gallery" class="section-padding" style="background-color:#fff8ef;">
     <div class="container">
       <div class="row text-center">
-        <h2 class="wow fadeInUp" data-wow-delay="0.2s">Những hình ảnh gắn liền với cổng trường</h2>
+        <h2 class="wow fadeInUp" data-wow-delay="0.2s">Những hình ảnh gắn liền với trường</h2>
         <p class="wow fadeInUp" data-wow-delay="0.4s">Bạn có thể thêm nhiều ảnh ở đây</p>
       </div>
 
