--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="vi">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -19,12 +20,14 @@
   <!-- Inline small fix for better rendering on mobile if needed -->
   <style>
     /* Small safe defaults to avoid initial overflow on very small devices */
-    html, body {
+    html,
+    body {
       -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
     }
   </style>
 </head>
+
 <body id="top" data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
   <!-- PRE LOADER -->
@@ -42,7 +45,8 @@
           <p>Chào mừng đến với báo điện tử - 11A7</p>
         </div>
         <div class="col-md-8 col-sm-7 text-align-right">
-          <span class="email-icon"><i class="fa fa-envelope-o"></i> <a href="mailto:tea.a7.k39@gmail.com">tea.a7.k39@gmail.com</a></span>
+          <span class="email-icon"><i class="fa fa-envelope-o"></i> <a
+              href="mailto:tea.a7.k39@gmail.com">tea.a7.k39@gmail.com</a></span>
         </div>
       </div>
     </div>
@@ -53,7 +57,8 @@
     <div class="container">
 
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" aria-expanded="false" aria-controls="main-nav" id="mobile-toggle">
+        <button type="button" class="navbar-toggle collapsed" aria-expanded="false" aria-controls="main-nav"
+          id="mobile-toggle">
           <span class="icon icon-bar"></span>
           <span class="icon icon-bar"></span>
           <span class="icon icon-bar"></span>
@@ -67,9 +72,10 @@
       <nav id="main-nav" class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#top" class="smoothScroll">Trang chủ</a></li>
-          <li><a href="#about" class="smoothScroll">Lời nhắn</a></li>
+          <li><a href="#about" class="smoothScroll">Lời dạy</a></li>
           <li><a href="#team" class="smoothScroll">Lịch sử hình thành</a></li>
           <li><a href="#news" class="smoothScroll">Tấm gương sáng giáo viên</a></li>
+          <li><a href="#sport " class="smoothScroll">Các hoạt động</a></li>
           <li><a href="#info" class="smoothScroll">Info</a></li>
         </ul>
       </nav>
@@ -116,9 +122,10 @@
             <h2 class="wow fadeInUp" data-wow-delay="0.6s">Đôi lời nhắn nhủ</h2>
             <div class="wow fadeInUp" data-wow-delay="0.8s">
               <p>
-                “Giáo dục là sự nghiệp của quần chúng. Cần phải phát huy đầy đủ dân chủ xã hội chủ nghĩa, 
-                xây dựng quan hệ thật tốt, đoàn kết thật chặt chẽ giữa thầy và thầy, giữa thầy và trò, 
-                giữa học trò với nhau, giữa cán bộ các cấp, giữa nhà trường và nhân dân để hoàn thành thắng lợi nhiệm vụ đó."
+                “Giáo dục là sự nghiệp của quần chúng. Cần phải phát huy đầy đủ dân chủ xã hội chủ nghĩa,
+                xây dựng quan hệ thật tốt, đoàn kết thật chặt chẽ giữa thầy và thầy, giữa thầy và trò,
+                giữa học trò với nhau, giữa cán bộ các cấp, giữa nhà trường và nhân dân để hoàn thành thắng lợi nhiệm vụ
+                đó."
               </p>
             </div>
             <figure class="profile wow fadeInUp" data-wow-delay="1s">
@@ -131,8 +138,17 @@
 
         <!-- Right: decorative background image (kept in separate column for mobile friendliness) -->
         <div class="col-md-6 col-sm-12">
-          <div class="about-image"
-               style="min-height:260px; background: url('images/uploaded-dataimages-201711-original-_images2063019_5.jpg') right center/cover no-repeat; border-radius:12px; box-shadow: 0 6px 18px rgba(0,0,0,0.12);">
+          <div class="about-image" style="min-height:260px; background: url('images/anhbac.jpg') right center/cover no-repeat; border-radius:12px; box-shadow: 0 6px 18px rgba(0,0,0,0.12);
+               position: relative;
+  width: 100%;
+  min-height: 400px;
+  margin-top: 30px;
+  background-size: cover !important;
+  background-position: center center !important;
+  background-repeat: no-repeat !important;
+  border-radius: 12px;
+  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.15);
+  overflow: hidden;">
           </div>
         </div>
       </div>
@@ -228,7 +244,9 @@
               <p>Thông tin tóm tắt...</p>
               <div class="author">
                 <img src="images/logo.jpeg" class="img-responsive" alt="">
-                <div class="author-info"><h5>A7-K39</h5></div>
+                <div class="author-info">
+                  <h5>A7-K39</h5>
+                </div>
               </div>
             </div>
           </div>
@@ -243,7 +261,9 @@
               <p>Thông tin tóm tắt...</p>
               <div class="author">
                 <img src="images/logo.jpeg" class="img-responsive" alt="">
-                <div class="author-info"><h5>A7-K39</h5></div>
+                <div class="author-info">
+                  <h5>A7-K39</h5>
+                </div>
               </div>
             </div>
           </div>
@@ -254,11 +274,13 @@
             <a href="#"><img src="images/thuong3.jpg" class="img-responsive" alt=""></a>
             <div class="news-info">
               <span>Nov 01, 2025</span>
-              <h3><a href="#">Cô Phùng Thị Vui - đạt giải Ba</a></h3>
+              <h3><a href="#">Cô Phùng Thị Vui - đạt giải Ba cuộc thi giáo viên dạy giỏi</a></h3>
               <p>Thông tin tóm tắt...</p>
               <div class="author">
                 <img src="images/logo.jpeg" class="img-responsive" alt="">
-                <div class="author-info"><h5>A7-K39</h5></div>
+                <div class="author-info">
+                  <h5>A7-K39</h5>
+                </div>
               </div>
             </div>
           </div>
@@ -267,6 +289,86 @@
       </div>
     </div>
   </section>
+
+  <section id="sport" class="services_section">
+  <div class="container">
+    <h2 class="services_taital"><span style="color: #fcce2d">Hoạt động</span> ngoại khóa</h2>
+
+    <div class="services_section_2">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="image_main">
+            <img src="images/muarong.jpg" alt="Ảnh 1">
+            <div class="text_main">
+              <div class="seemore_text">Nghệ thuật múa rồng</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <div class="image_main">
+            <img src="images/keoco.jpg" alt="Ảnh 2">
+            <div class="text_main">
+              <div class="seemore_text">Trò chơi dân gian</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+          <div class="image_main">
+            <img src="images/giaoluu.png" alt="Ảnh 3">
+            <div class="text_main">
+              <div class="seemore_text">Giao lưu âm nhạc</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+          <div class="image_main">
+            <img src="images/trian.jpg" alt="Ảnh 4">
+            <div class="text_main">
+              <div class="seemore_text">Lễ tri ân</div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+  </div>
+</section>
+
+<section id="#loinhan" class="services_section">
+  <div class="container">
+    <h1 class="services_taital"><span style="color:#fcce2d;">Lời</span> nhắn gửi</h1>
+    <p class="about_text">Đôi lời chia sẻ gửi đến mái trường thân yêu</p>
+
+    <div class="about_section_2">
+      <div class="row">
+        <!-- Cột bên trái: nội dung lời thoại -->
+        <div class="col-md-6 col-sm-12">
+          <div class="about_box wow fadeInLeft" data-wow-delay="0.3s">
+            <p class="date_text">05 / 11 / 2025</p>
+            <h4 class="title_text">Những dòng tâm sự</h4>
+            <p class="lorem_text">
+              Nhân dịp kỷ niệm 40 năm thành lập Trường THPT Nguyễn Du – Thanh Oai (1985–2025) và chào mừng Ngày Nhà giáo Việt Nam 20/11, chúng em xin gửi tới quý thầy cô lời tri ân sâu sắc và lòng biết ơn chân thành nhất.Bốn mươi năm – một hành trình xây dựng và phát triển đầy tự hào, ngôi trường Nguyễn Du – Thanh Oai đã trở thành mái nhà chung ấm áp, nơi chắp cánh ước mơ và bồi đắp tri thức cho bao thế hệ học sinh.Chúng em xin kính chúc quý thầy cô luôn mạnh khỏe, hạnh phúc, tiếp tục cống hiến hết mình cho sự nghiệp trồng người cao quý.
+Kính chúc nhà trường ngày càng phát triển vững mạnh, xứng đáng với truyền thống “Tôn sư trọng đạo”, là niềm tự hào của bao thế hệ thầy trò Nguyễn Du – Thanh Oai.
+            </p>
+            <p class="post_text">— Tập thể 11A7</p>
+          </div>
+        </div>
+
+        <!-- Cột bên phải: hình ảnh -->
+        <div class="col-md-6 col-sm-12">
+          <div class="about_image wow fadeInRight" data-wow-delay="0.3s">
+            <img src="images/72a0e618-1fbf-48e5-9862-c2af402e9af5.jpeg" alt="Thầy cô" class="img-fluid">
+            <h6 class="plus_text">+</h6>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
 
   <!-- FOOTER / INFO -->
   <section id="info" class="slider" data-stellar-background-ratio="1">
@@ -287,13 +389,15 @@
 
           <div class="col-md-4 col-sm-4">
             <div class="footer-thumb">
-              <h4 class="wow fadeInUp" data-wow-delay="0.4s">Creater</h4>
+              <h4 class="wow fadeInUp" data-wow-delay="0.8s">Creater</h4>
               <div class="latest-stories">
                 <div class="stories-image">
                   <a href="#"><img src="images/news-image.jpg" class="img-responsive" alt=""></a>
                 </div>
                 <div class="stories-info">
-                  <a href="#"><h5>Think scenario</h5></a>
+                  <a href="#">
+                    <h5>Think scenario</h5>
+                  </a>
                   <span>Nov 03, 2025</span>
                 </div>
               </div>
@@ -303,7 +407,9 @@
                   <a href="#"><img src="images/news-image.jpg" class="img-responsive" alt=""></a>
                 </div>
                 <div class="stories-info">
-                  <a href="#"><h5>Create website</h5></a>
+                  <a href="#">
+                    <h5>Create website</h5>
+                  </a>
                   <span>Nov 04, 2025</span>
                 </div>
               </div>
@@ -328,7 +434,8 @@
           <div class="col-md-12 col-sm-12 border-top">
             <div class="col-md-4 col-sm-6">
               <div class="copyright-text">
-                <p>Copyright &copy; 2025 | Báo Điện tử | Design: <a rel="nofollow" href="https://www.facebook.com/tooplate" target="_parent">Kudo</a></p>
+                <p>Copyright &copy; 2025 | Báo Điện tử | Design: <a rel="nofollow"
+                    href="https://www.facebook.com/tooplate" target="_parent">Kudo</a></p>
               </div>
             </div>
             <div class="col-md-6 col-sm-6">
@@ -341,7 +448,8 @@
             </div>
             <div class="col-md-2 col-sm-2 text-align-center">
               <div class="angle-up-btn">
-                <a href="#top" class="smoothScroll wow fadeInUp" data-wow-delay="1.2s"><i class="fa fa-angle-up"></i></a>
+                <a href="#top" class="smoothScroll wow fadeInUp" data-wow-delay="1.2s"><i
+                    class="fa fa-angle-up"></i></a>
               </div>
             </div>
           </div>
@@ -363,7 +471,7 @@
 
   <!-- Small JS to ensure mobile toggle behaves consistently -->
   <script>
-    (function(){
+    (function () {
       // fallback toggle in case Bootstrap collapse doesn't behave due to CSS overrides
       var btn = document.getElementById('mobile-toggle');
       var nav = document.getElementById('main-nav');
@@ -386,4 +494,5 @@
   </script>
 
 </body>
+
 </html>
