--- a/thehecu.html
+++ b/thehecu.html
@@ -66,14 +66,12 @@
         <div class="col-md-6 col-sm-12 wow fadeInLeft" data-wow-delay="0.3s">
           <h2>Thế hệ thầy cô giáo đời đầu</h2>
           <p>
-            Những thầy cô giáo đầu tiên đã đặt nền móng cho sự phát triển vững mạnh của ngôi trường hôm nay. 
-            Họ là những người cống hiến cả tuổi trẻ và nhiệt huyết cho sự nghiệp trồng người, 
-            là những tấm gương sáng về đạo đức, chuyên môn và lòng yêu nghề.
+            Những ngày đầu thành lập, trường chỉ có 5 lớp vừa học vừa làm với hơn chục thầy, cô giáo từ khắp nơi được phân công về giảng dạy dưới sự lãnh đạo của thầy hiệu trưởng đầu tiên là thầy Lê Quỳnh Lưu. Trường nằm trên địa bàn Thôn Ngọc Đình, xã Hồng Dương Huyện Thanh Oai, cơ sở vật chất trường lớp nghèo nàn, thiếu thốn mọi thứ, trang thiết bị giảng dạy hầu như chưa có gì.
           </p>
           <p>
-            Dù đã qua bao năm tháng, hình ảnh những người thầy, người cô tận tụy, 
-            giản dị nhưng đầy tâm huyết vẫn sống mãi trong trái tim của bao thế hệ học trò.
+            Nhà trường chỉ có 6 phòng hoc là dãy nhà cấp 4, tất cả Ban Giám hiệu chỉ có  chung một phòng, vậy mà thầy trò vừa giảng dạy, học tập vừa làm ra của cải vật chất. Từ định hướng “vừa học vừa làm”, với mong muốn thông qua lao động sản xuất để giáo dục học sinh, hình thành nhân cách, thầy và trò nhà trường vừa học tập văn hoá vừa tích cực tham gia xây dựng cơ sở trường lớp, trồng lúa, trồng khoai, chăn nuôi, đóng gạch, đốt lò gạch. Mỗi học sinh hàng tháng phải đóng nộp 20 viên gạch để xây dựng nhà trường
           </p>
+          
         </div>
 
         <div class="col-md-6 col-sm-12 wow fadeInRight" data-wow-delay="0.3s">
