--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 
   <!-- HEADER -->
   <header>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+
     <div class="container">
       <div class="row">
         <div class="col-md-4 col-sm-5">
